automatically backed up by learn

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,5 +1,5 @@
 <%= form_tag("/search", method: "get") do %>
-  <%= label_tag(:product, "Search for:") %>
+  <%= label_tag(:product, "Product") %>
   <%= text_field_tag(:product) %>
   <%= submit_tag("Add Items") %>
 <% end %>
