--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag("/search", method: "get") do %>
+<%= form_tag("/search", method: "post") do %>
   <%= label_tag(:product, "Product") %>
   <%= text_field_tag(:product) %>
   <%= submit_tag("Add Items") %>
