--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,5 +1,5 @@
 <%= form_tag("/search", method: "post") do %>
   <%= label_tag(:product, "Product") %>
   <%= text_field_tag(:product) %>
-  <%= submit_tag("add to cart") %>
+  <%= button_tag("add to cart") %>
 <% end %>
