--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,1 +1,5 @@
-products_index
+<%= form_tag method: "post" do %>
+  <%= label_tag(:product, "Product") %>
+  <%= text_field_tag(:product) %>
+  <%= button_tag("add to cart") %>
+<% end %>
