--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag do %>
+<%= form_tag "/products" do %>
   <%= label_tag(:product, "Product") %>
   <%= text_field_tag(:product) %>
   <%= button_tag("add to cart") %>
