automatically backed up by learn

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag method: "post" do %>
+<%= form_tag("/products") do %>
   <%= label_tag(:product, "Product") %>
   <%= text_field_tag(:product) %>
   <%= button_tag("add to cart") %>
