automatically backed up by learn

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -3,3 +3,11 @@
   <%= text_field_tag(:product) %>
   <%= button_tag("add to cart") %>
 <% end %>
+
+<% if session[:cart] %>
+
+  <% session[:cart].each do |item| %>
+    <li><%= item %></li>
+  <% end %>
+
+<% end %>
